# CelestialCanvas

./: .readthedocs.yaml  LICENSE  README.md  Untitled.ipynb  image.py  pyproject.toml
.github/workflows/: test_codecov.yml
CelestialCanvas/: ___init__.py  __init__.py  composite.py  image.py
docs/: requirements.txt
docs/source/: celestialcanvas.rst  conf.py  index.rst
example/: Untitled.ipynb  example_notebook.ipynb
jupyter/: Untitled.ipynb  composite_test.py
test/: test_composite  test_composite.py  test_image.py
