[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "CelestialCanvas"
dynamic = ["version"]
authors = [
    { name="Marco Janach" },
    { name="Simon Benke" }
]
description = "A package to create composite images from astronomical data."
readme = "README.md"
requires-python = ">=3.10.13"
dependencies = [
    "numpy >=1.26.3",
    "matplotlib >= 3.8.2",
]

[project.urls]
Homepage = "https://github.com/SimonPBe/CelestialCanvas"

[tool.setuptools.dynamic]
version = {attr = "pysequence.__version__"}