[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "CelestialCanvas"
dynamic = ["version"]
authors = [
    { name="Marco Janach" },
    { name="Simon Benke" }
]
description = "A package to create composite images from astronomical data."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy >=1.22",
    "matplotlib >= 3.7",
]

[project.urls]
Homepage = "https://github.com/SimonPBe/CelestialCanvas"

[tool.setuptools.dynamic]
version = {attr = "CelestialCanvas.__version__"}